# NSA_Project

./: CMakeLists.txt
cmake/: BinToHeader.cmake
injector/: main.cpp
injector/include/HellsGate/: HellsGate.h  SyscallManager.h
injector/include/InjectorStrategy/InjectorLoadLibrary/: InjectorLoadLibraryDefault.h  InjectorLoadLibrarySyscall.h  InjectorLoadLibraryUndocumented.h
injector/include/InjectorStrategy/InjectorManualMap/: InjectorManualMap.h
injector/include/Utils/: FilesystemUtils.h  ProcUtils.h
injector/src/: ProcUtils.cpp  main.cpp
injector/src/HellsGate/: HellsGate.cpp  SyscallManager.cpp  syscalls.s
injector/src/InjectorStrategy/InjectorLoadLibrary/: InjectorLoadLibraryDefault.cpp  InjectorLoadLibrarySyscall.cpp  InjectorLoadLibraryUndocumented.cpp
injector/src/InjectorStrategy/InjectorManualMap/: InjectorManualMap.cpp
injector/src/Utils/: FilesystemUtils.cpp  ProcUtils.cpp
payload/: library.cpp
